; ModuleID = '/home/carl/AnghaBench/mimikatz/mimikatz/modules/extr_kuhl_m_token.c_kuhl_m_token_revert.c'
source_filename = "/home/carl/AnghaBench/mimikatz/mimikatz/modules/extr_kuhl_m_token.c_kuhl_m_token_revert.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [15 x i32] [i32 83, i32 101, i32 116, i32 84, i32 104, i32 114, i32 101, i32 97, i32 100, i32 84, i32 111, i32 107, i32 101, i32 110, i32 0], align 4
@STATUS_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @kuhl_m_token_revert(i32 %0, i32** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32**, align 8
  store i32 %0, i32* %3, align 4
  store i32** %1, i32*** %4, align 8
  %5 = call i64 @SetThreadToken(i32* null, i32* null)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %9

7:                                                ; preds = %2
  %8 = call i32 @kuhl_m_token_whoami(i32 0, i32* null)
  br label %11

9:                                                ; preds = %2
  %10 = call i32 @PRINT_ERROR_AUTO(i8* bitcast ([15 x i32]* @.str to i8*))
  br label %11

11:                                               ; preds = %9, %7
  %12 = load i32, i32* @STATUS_SUCCESS, align 4
  ret i32 %12
}

declare dso_local i64 @SetThreadToken(i32*, i32*) #1

declare dso_local i32 @kuhl_m_token_whoami(i32, i32*) #1

declare dso_local i32 @PRINT_ERROR_AUTO(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
